# drums2mei

./: .gitignore  README.md  pyproject.toml  test_json2mei.py
src/dmp/: cli.py
src/dmp/exporters/: json2mei.py
src/dmp/image/: grid_parser.py  pattern_num_ocr.py  row_index_ocr.py  straighten.py
src/dmp/legacy/: extract_camelot.py  extract_data.py  extract_img2table.py  extract_tables.py  merge_to_json.py  parse_grids.py  process_all_grids.py
src/dmp/pdf/: extract_cv2.py
